# tau

./: .gitignore  ARCHITECTURE.md  LIBRARY_INTEGRATION.md  OSC_INTEGRATION.md  QUICKSTART.md  README.md  REFACTOR_PROPOSAL.md  SCREENTOOL_FILE_LAYOUT.md  TAU_TETRA_DESIGN.md  VIDEO_ENHANCEMENTS.md  VIDEO_PLAYBACK.md  __main__.py  build.sh  completion.py  config.py  cwd_manager.py  data_loader.py  lanes.py  main.py  osc_client.py  palette.py  project.py  pyproject.toml  recording_api.py  repl.py  state.py  tau  tau-send.c  tau.c  tau.spec  test_quadra.sh  test_tau_integration.py  trs.py  tscale_runner.py  ui_utils.py  video_popup.py
analysis/: statistics.py
archive/: INTEGRATION_SUMMARY.md  MIGRATION.md  MIGRATION_GUIDE.md  NEXT_SESSION.md  OSC_QUICKSTART.md  PHASE1_COMPLETE.md  README_REPL.md  TAU_INTEGRATION.md  TAU_INTEGRATION_COMPLETE.md  command_definitions.py  engine  engine.c
cli/: commands.py  manager.py  parser.py
commands/: __init__.py  audio_commands.py  config_commands.py  display_commands.py  events_lane_commands.py  lane_commands.py  lane_editor_commands.py  marker_commands.py  palette_and_theming_commands.py  parameter_commands.py  semantic_name_mapping_commands.py  transport_commands.py  trs_project_commands.py  utility_commands.py  zoom_commands.py
core/: command_tree.py  config.py  project.py  state.py
docs/: screentool-integration.md
engine/: build.sh  envelope.h  quadra.json  tau-engine  tau-engine.c  tau-send  test-tau-quick.sh  test_tau_dgram.sh
integration/: tau_playback.py  tscale_runner.py
player_c/: build.sh  player.c  scanner.c  (+6 more)
(+123 files in other folders)
